--- a/install/templates/step1.html.twig
+++ b/install/templates/step1.html.twig
@@ -32,6 +32,14 @@
                             <input id="language_ja_JP" class="form-check-input" type="radio" name="language" value="ja_JP">
                             <label for="language_ja_JP">日本語で続ける</label>
                         </div>
+                        <div class="form-check mb-2">
+                            <input id="language_cs_CZ" class="form-check-input" type="radio" name="language" value="cs_CZ">
+                            <label for="language_cs_CZ">Chci pokračovat v češtině</label>
+                        </div>
+                        <div class="form-check mb-2">
+                            <input id="language_lt_LT" class="form-check-input" type="radio" name="language" value="lt_LT">
+                            <label for="language_lt_LT">Noriu tęsti lietuvių kalba</label>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-check mb-2">
@@ -47,8 +55,16 @@
                             <label for="language_nb_NO">Jeg ønsker å forsette på norsk</label>
                         </div>
                         <div class="form-check mb-2">
+                            <input id="language_ru_RU" class="form-check-input" type="radio" name="language" value="ru_RU">
+                            <label for="language_ru_RU">Я хочу продолжить на русском</label>
+                        </div>
+                        <div class="form-check mb-2">
+                            <input id="language_tr_TR" class="form-check-input" type="radio" name="language" value="tr_TR">
+                            <label for="language_tr_TR">Türkçe olarak devam etmek istiyorum</label>
+                        </div>
+                        <div class="form-check mb-2">
                             <input id="language_zh_CN" class="form-check-input" type="radio" name="language" value="zh_CN">
-                            <label for="language_zh_CN">简体中文</label>
+                            <label for="language_zh_CN">我想用中文继续</label>
                         </div>
                     </div>
                 </div>
