feat(ui): redesign language selector with flags and improved layout

--- a/install/templates/base.html.twig
+++ b/install/templates/base.html.twig
@@ -6,6 +6,7 @@
     <title>Poweradmin</title>
     <link href="../vendor/twbs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../vendor/twbs/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons@6.6.6/css/flag-icons.min.css">
     <link rel=stylesheet href="../style/ignite.css?time={{ file_version }}" type="text/css">
     <script type="text/javascript" src="includes/helper.js?time={{ file_version }}"></script>
 </head>
