--- a/install/templates/step1.html.twig
+++ b/install/templates/step1.html.twig
@@ -8,71 +8,237 @@
             {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Choose a language for installation{% endtrans %}
         </div>
         <div class="card-body">
+            <div class="text-center mb-4">
+                <p>{% trans %}Please select your preferred language to continue with the installation:{% endtrans %}</p>
+            </div>
+
             <form method="post">
                 <input type="hidden" name="install_token" value="{{ install_token }}">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-check mb-2">
-                            <input id="language_en_EN" class="form-check-input" type="radio" name="language" value="en_EN" checked>
-                            <label for="language_en_EN">I prefer to proceed in English</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_nl_NL" class="form-check-input" type="radio" name="language" value="nl_NL">
-                            <label for="language_nl_NL">Ik ga graag verder in het Nederlands</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_de_DE" class="form-check-input" type="radio" name="language" value="de_DE">
-                            <label for="language_de_DE">Ich mache in Deutsch weiter</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_it_IT" class="form-check-input" type="radio" name="language" value="it_IT">
-                            <label for="language_it_IT">Preferisco procedere in italiano</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_ja_JP" class="form-check-input" type="radio" name="language" value="ja_JP">
-                            <label for="language_ja_JP">日本語で続ける</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_cs_CZ" class="form-check-input" type="radio" name="language" value="cs_CZ">
-                            <label for="language_cs_CZ">Chci pokračovat v češtině</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_lt_LT" class="form-check-input" type="radio" name="language" value="lt_LT">
-                            <label for="language_lt_LT">Noriu tęsti lietuvių kalba</label>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-check mb-2">
-                            <input id="language_pl_PL" class="form-check-input" type="radio" name="language" value="pl_PL">
-                            <label for="language_pl_PL">Chcę kontynuować po polsku</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_fr_FR" class="form-check-input" type="radio" name="language" value="fr_FR">
-                            <label for="language_fr_FR">Je préfère continuer en français</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_nb_NO" class="form-check-input" type="radio" name="language" value="nb_NO">
-                            <label for="language_nb_NO">Jeg ønsker å forsette på norsk</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_ru_RU" class="form-check-input" type="radio" name="language" value="ru_RU">
-                            <label for="language_ru_RU">Я хочу продолжить на русском</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_tr_TR" class="form-check-input" type="radio" name="language" value="tr_TR">
-                            <label for="language_tr_TR">Türkçe olarak devam etmek istiyorum</label>
-                        </div>
-                        <div class="form-check mb-2">
-                            <input id="language_zh_CN" class="form-check-input" type="radio" name="language" value="zh_CN">
-                            <label for="language_zh_CN">我想用中文继续</label>
+                <div class="row justify-content-center">
+                    <div class="col-lg-10">
+                        <div class="language-selection">
+                            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_en_EN" class="form-check-input" type="radio" name="language" value="en_EN" checked>
+                                                <label for="language_en_EN" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-gb me-2"></span> English
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_nl_NL" class="form-check-input" type="radio" name="language" value="nl_NL">
+                                                <label for="language_nl_NL" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-nl me-2"></span> Nederlands
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_de_DE" class="form-check-input" type="radio" name="language" value="de_DE">
+                                                <label for="language_de_DE" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-de me-2"></span> Deutsch
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_fr_FR" class="form-check-input" type="radio" name="language" value="fr_FR">
+                                                <label for="language_fr_FR" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-fr me-2"></span> Français
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_it_IT" class="form-check-input" type="radio" name="language" value="it_IT">
+                                                <label for="language_it_IT" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-it me-2"></span> Italiano
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_cs_CZ" class="form-check-input" type="radio" name="language" value="cs_CZ">
+                                                <label for="language_cs_CZ" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-cz me-2"></span> Čeština
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_pl_PL" class="form-check-input" type="radio" name="language" value="pl_PL">
+                                                <label for="language_pl_PL" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-pl me-2"></span> Polski
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_lt_LT" class="form-check-input" type="radio" name="language" value="lt_LT">
+                                                <label for="language_lt_LT" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-lt me-2"></span> Lietuvių
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_nb_NO" class="form-check-input" type="radio" name="language" value="nb_NO">
+                                                <label for="language_nb_NO" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-no me-2"></span> Norsk
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_ru_RU" class="form-check-input" type="radio" name="language" value="ru_RU">
+                                                <label for="language_ru_RU" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-ru me-2"></span> Русский
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_tr_TR" class="form-check-input" type="radio" name="language" value="tr_TR">
+                                                <label for="language_tr_TR" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-tr me-2"></span> Türkçe
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_ja_JP" class="form-check-input" type="radio" name="language" value="ja_JP">
+                                                <label for="language_ja_JP" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-jp me-2"></span> 日本語
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_zh_CN" class="form-check-input" type="radio" name="language" value="zh_CN">
+                                                <label for="language_zh_CN" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-cn me-2"></span> 中文
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+                
                 <input type="hidden" name="step" value="{{ next_step }}">
-                <div class="mt-3">
-                    <input type="submit" name="submit" class="btn btn-sm btn-primary" value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
+                <div class="mt-4 text-center">
+                    <input type="submit" name="submit" class="btn btn-sm btn-primary" value="{% trans %}Begin Installation{% endtrans %}">
                 </div>
             </form>
         </div>
     </div>
+
+    <style>
+        .language-card {
+            transition: all 0.2s ease;
+            border: 1px solid #dee2e6;
+            cursor: pointer;
+        }
+        
+        .language-card:hover {
+            border-color: #007bff;
+            box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
+            transform: translateY(-2px);
+        }
+        
+        .form-check-input:checked + .form-check-label {
+            font-weight: bold;
+        }
+        
+        .form-check-label {
+            width: 100%;
+            cursor: pointer;
+        }
+        
+        .card-body {
+            padding: 0.75rem;
+        }
+        
+        .language-card .form-check {
+            width: 100%;
+        }
+    </style>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Make entire card clickable for language selection
+            document.querySelectorAll('.language-card').forEach(card => {
+                card.addEventListener('click', function() {
+                    const radio = this.querySelector('input[type="radio"]');
+                    radio.checked = true;
+                });
+            });
+        });
+    </script>
 {% endblock %}
